[project]
name = "pvsim-engine"
version = "1.0.2"
description = "PV-IoT Simulation Engine — G-SET Research Unit, Kasetsart University Sriracha Campus"
authors = [
    { name = "Kullawadee Somboonviwat", email = "kullawadee.som@ku.th" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage      = "https://github.com/kullawadee-ku/pvsim-engine"
Repository    = "https://github.com/kullawadee-ku/pvsim-engine"
Documentation = "https://github.com/kullawadee-ku/pvsim-engine/blob/main/api_reference.md"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["pvsim_engine"]
omit   = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false